Configured gatsby-config to fix non-overlapping images from remark-images plugin

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -169,6 +169,10 @@ body {
   }
 }
 
+span {
+  display: none;
+}
+
 @media (max-width: 1079px) {
   html { font-size: 16px; }
 }
